--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,15 @@
 [submodule "ace-window"]
 	path = lib/ace-window
 	url = git@github.com:abo-abo/ace-window.git
+[submodule "all-the-icons"]
+	path = lib/all-the-icons
+	url = git@github.com:domtronn/all-the-icons.el.git
+[submodule "all-the-icons-ivy"]
+	path = lib/all-the-icons-ivy
+	url = git@github.com:asok/all-the-icons-ivy.git
+[submodule "all-the-icons-ivy-rich"]
+	path = lib/all-the-icons-ivy-rich
+	url = git@github.com:seagle0128/all-the-icons-ivy-rich.git
 [submodule "auto-compile"]
 	path = lib/auto-compile
 	url = git@github.com:emacscollective/auto-compile.git
@@ -16,12 +25,33 @@
 [submodule "compat"]
 	path = lib/compat
 	url = git@github.com:emacs-straight/compat.git
+[submodule "dash"]
+	path = lib/dash
+	url = git@github.com:magnars/dash.el.git
+[submodule "doom-themes"]
+	path = lib/doom-themes
+	url = git@github.com:doomemacs/themes.git
 [submodule "emacsql"]
 	path = lib/emacsql
 	url = git@github.com:skeeto/emacsql.git
+[submodule "emojify"]
+	path = lib/emojify
+	url = git@github.com:iqbalansari/emacs-emojify.git
 [submodule "epkg"]
 	path = lib/epkg
 	url = git@github.com:emacscollective/epkg.git
+[submodule "ht"]
+	path = lib/ht
+	url = git@github.com:Wilfred/ht.el.git
+[submodule "hydra"]
+	path = lib/hydra
+	url = git@github.com:abo-abo/hydra.git
+[submodule "ivy"]
+	path = lib/ivy
+	url = git@github.com:abo-abo/swiper.git
+[submodule "ivy-rich"]
+	path = lib/ivy-rich
+	url = git@github.com:Yevgnen/ivy-rich.git
 [submodule "no-littering"]
 	path = lib/no-littering
 	url = git@github.com:emacscollective/no-littering.git
@@ -31,3 +61,6 @@
 [submodule "use-package"]
 	path = lib/use-package
 	url = git@github.com:jwiegley/use-package.git
+[submodule "which-key"]
+	path = lib/which-key
+	url = git@github.com:justbur/emacs-which-key.git
