--- a/.gitmodules
+++ b/.gitmodules
@@ -130,6 +130,8 @@
 [submodule "lsp-mode"]
 	path = lib/lsp-mode
 	url = git@github.com:emacs-lsp/lsp-mode.git
+	load-path = .
+	load-path = clients
 [submodule "lsp-treemacs"]
 	path = lib/lsp-treemacs
 	url = git@github.com:emacs-lsp/lsp-treemacs.git
@@ -139,6 +141,8 @@
 [submodule "magit"]
 	path = lib/magit
 	url = git@github.com:magit/magit.git
+	recursive-byte-compile = true
+	info-path = Documentation
 [submodule "markdown-mode"]
 	path = lib/markdown-mode
 	url = git@github.com:jrblevin/markdown-mode.git
